# svm2csr

./: .travis.yml  Cargo.toml  README.md  pyproject.toml  requirements.txt  setup.py
src/: fileblocks.rs  svmlight.rs
svm2csr/: load.py
tests/: test_load_binding.py
