[build-system]
requires = ["maturin"]
build-backend = "maturin"

[metadata]
name = "svm2csr"
description = "Convert SVMlight text files to scipy CSR matrices"
long_description_content_type = "text/markdown"
license = "Apache Software License 2.0"
classifiers = [
    "Framework :: Django",
    "License :: OSI Approved :: Apache Software License 2.0",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[options]
zip_safe = false
install_requires = [
    "numpy",
    "scipy",
    "scikit-learn",
]

[options.extras_require]
testing = ["pytest"]
